--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -1,8 +1,8 @@
 <section class="login">
-    <h2>Hey there</h2>
-    <p>Log-in to access the awesomeness</p>
+    <h2>Login</h2>
+    <p>to access the awesomeness</p>
 
-    <form name="myForm" novalidate>
+    <form name="myForm" novalidate ng-submit="login()">
 
         <input name="email" placeholder="Email" ng-required="true" ng-model="user.email" type="email">
         <p ng-show="myForm.email.$invalid && myForm.email.$touched">Must be a valid email</p>
@@ -11,5 +11,6 @@
         <p ng-show="myForm.password.$invalid && myForm.password.$touched">Enter your password</p>
 
         <button class="btn" type="submit" ng-disabled="myForm.$invalid">Login</button>
+        <p>or <a href="#/register">register</a></p>
     </form>
 </section>
