--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,2 +1,6 @@
-<h2>Meetings</h2>
-<p>Hi, how are you</p>
+<section class="meetings cf">
+    <h2>Your Meetings</h2>
+    <div class="meeting" ng-repeat="meeting in meetings">
+        <p>{{ meeting.name }}</p>
+    </div>
+</section>
