--- a/builds/development/views/success.html
+++ b/builds/development/views/success.html
@@ -1,5 +1,6 @@
 <div class="meetings card cf">
     <div class="textintro">
         <h1>Success</h1>
+        <p>{{ message }}</p>
     </div>
 </div>
