--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,8 +1,10 @@
 <div class="meetings card cf">
+
     <div class="textintro">
         <h1>Add a Meeting</h1>
         <p>{{ message }}</p>
     </div>
+
     <form class="formgroup addmeeting cf"
     name="myform" ng-submit="addMeeting()" novalidate>
 
@@ -16,4 +18,13 @@
         ng-disabled="myform.$invalid">+</button>
     </form>
 
+    <h2>Your meetings</h2>
+
+    <div class="meeting" ng-repeat="(key, meeting) in meetings">
+        <button class="btn btn-delete tooltip"
+        ng-click="deleteMeeting(key)">
+            <span>Delete this meeting</span>
+        </button>
+        <span class="text">{{ meeting.name }}</span>
+    </div>
 </div>
