--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,5 +1,13 @@
 <div class="branding"><a href="#">angualrJS</a></div>
-<ul ng-hide="currentUser">
-    <li><a ng-href="#/login">Login</a></li>
-    <li><a ng-href="#/register">Register</a></li>
+<ul>
+    <li>
+        <a ng-href="#/meetings" ng-show="currentUser">
+            Meetigns
+            <span ng-show="howManyMeetings" class="badge">
+                {{ howManyMeetings }}
+            </span>
+        </a>
+    </li>
+    <li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
+    <li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>
 </ul>
