--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -25,6 +25,12 @@
         ng-click="deleteMeeting(key)">
             <span>Delete this meeting</span>
         </button>
+
+        <a href="/#/checkins/{{currentUser.regUser}}/{{meeting.$id}}"
+           class="btn btn-checkin tooltip">
+            <span>Go to check-in URL</span>
+        </a>
+
         <span class="text">{{ meeting.name }}</span>
     </div>
 </div>
