created a mechanism of displaying a list of checked-in users

--- a/builds/development/views/checkins.html
+++ b/builds/development/views/checkins.html
@@ -3,7 +3,7 @@
           ng-submit="addCheckin()">
 
         <div class="textintro">
-            <h1>Register</h1>
+            <h1>Check-in</h1>
             <p>Fill out this form to check-in or go
                 <a href="#/meetings">back to meetings</a>
             </p>
