--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -21,14 +21,18 @@
     <h2>Your meetings</h2>
 
     <div class="meeting" ng-repeat="(key, meeting) in meetings">
-        <button class="btn btn-delete tooltip"
-        ng-click="deleteMeeting(key)">
+        <button class="btn btn-delete tooltip" ng-click="deleteMeeting(key)">
             <span>Delete this meeting</span>
         </button>
 
         <a href="/#/checkins/{{currentUser.regUser}}/{{meeting.$id}}"
            class="btn btn-checkin tooltip">
             <span>Go to check-in URL</span>
+        </a>
+
+        <a href="/#/checkins/{{currentUser.regUser}}/{{meeting.$id}}/checkinslist"
+           class="btn btn-list tooltip">
+            <span>View List of checked in users</span>
         </a>
 
         <span class="text">{{ meeting.name }}</span>
