--- a/builds/development/views/checkinslist.html
+++ b/builds/development/views/checkinslist.html
@@ -6,10 +6,40 @@
     <div class="search cf">
         <h2>Search Checkins</h2>
         <input type="text" ng-model="query" placeholder="Search for users">
+
+        <div class="formgroup">
+            <span class="label">by:</span>
+            <select ng-modal="order">
+                <option value="firstname">First Name</option>
+                <option value="lastname">Last Name</option>
+                <option value="date">Date</option>
+            </select>
+        </div>
+
+
+        <div class="formgroup">
+            <input type="radio" id="dirascending" ng-model="direction"
+            name="direction">
+            <label for="dirascending">asc</label>&nbsp;
+
+            <input type="radio" id="dirdescending" ng-model="direction"
+            name="direction" value="reverse">
+            <label for="dirdescending">desc</label>
+        </div>
+
+        <div class="buttons cf" ng-show="currentUser">
+            <button ng-hide="recordId" class="btn btn-pick"
+            ng-click="pickRandom()">Pick Random</button>
+
+            <button ng-show="recordId" class="btn btn-pick"
+            ng-click="recordId=''">Reset</button>
+        </div>
+
     </div>
 
     <ul class="userlist cf">
-        <li ng-repeat="checkin in checkins | filter:query">
+        <li ng-repeat="checkin in checkins | orderBy:order:direction
+         | filter: { $id: recordId, $: query} ">
             <div class="checkin">
                 <div class="buttons" ng-show="currentUser">
                     <button class="btn btn-delete tooltip"
