--- a/builds/development/views/checkinslist.html
+++ b/builds/development/views/checkinslist.html
@@ -38,22 +38,50 @@
     </div>
 
     <ul class="userlist cf">
-        <li ng-repeat="checkin in checkins | orderBy:order:direction
+        <li ng-class="expanded" ng-repeat="checkin in checkins | orderBy:order:direction
          | filter: { $id: recordId, $: query} ">
+
             <div class="checkin">
                 <div class="buttons" ng-show="currentUser">
                     <button class="btn btn-delete tooltip"
-                    ng-click="deleteCheckin(checkin.$id)">
+                        ng-click="deleteCheckin(checkin.$id)">
                         <span>Delete this check-in</span>
                     </button>
+
+                    <button class="btn btn-love tooltip"
+                        ng-click="showLove(checkin)">
+                        <span>Show the love</span>
+                    </button>
                 </div>
+
                 <div class="info">
                     <h2>{{ checkin.firstname }} {{ checkin.lastname }}</h2>
+
                     <div class="date">
                         {{ checkin.date | date: 'MMM d, yy h:mm a' }}
                     </div>
                 </div>
-            </div>
+
+                <div class="showcheckins" ng-show="checkin.show">
+                    <form  name="myform" class="formgroup cf" ng-submit="giveLove(checkin, checkin.giftText)"
+                    novalidate>
+
+                        <input type="text" name="giftText" placeholder="What are you giving them?"
+                            ng-model="checkin.giftText" ng-required="true">
+
+                        <button type="submit" class="btn"
+                            ng-disabled="myform.$invalid">Add a new giftText</button>
+                    </form>
+
+                    <ul class="awardslist">
+                        <li class="cf"
+                            ng-repeat="(key, award) in checkin.awards">
+                            <div class="award">{{ award.name }}</div>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>      <!--checkin-->
         </li>
     </ul>
 </div>
