--- a/builds/development/views/checkinslist.html
+++ b/builds/development/views/checkinslist.html
@@ -76,7 +76,14 @@
                     <ul class="awardslist">
                         <li class="cf"
                             ng-repeat="(key, award) in checkin.awards">
-                            <div class="award">{{ award.name }}</div>
+                            <div class="award">{{ award.name }}
+                                <div class="buttons" ng-show="currentUser">
+                                    <button class="btn btn-delete award tooltip"
+                                        ng-click="deleteLove(checkin, key)">
+                                        <span>Delete this award</span>
+                                    </button>
+                                </div>
+                            </div>
                         </li>
                     </ul>
 
